Translate error page

--- a/Kartverket.Geonorge.Download/Resources/UI.en.resx
+++ b/Kartverket.Geonorge.Download/Resources/UI.en.resx
@@ -126,10 +126,32 @@
   <data name="APIsAndInterfaces" xml:space="preserve">
     <value>APIs and Interfaces</value>
   </data>
+  <data name="ContactUs" xml:space="preserve">
+    <value>Contact us</value>
+  </data>
   <data name="DownloadAPI" xml:space="preserve">
     <value>Download API</value>
   </data>
+  <data name="Error" xml:space="preserve">
+    <value>Error</value>
+  </data>
+  <data name="ErrorInfo" xml:space="preserve">
+    <value>Unfortunately, an error has occurred with your request. Please try again.</value>
+  </data>
+  <data name="ErrorReport" xml:space="preserve">
+    <value>&lt;p&gt;The error is logged and will be checked by the system administrator.&lt;/p&gt;
+&lt;p&gt;You can also report the error to &lt;a mailto:"post@norgedigitalt.no"&gt;post@norgedigitalt.no &lt;/a&gt;. &lt;/p&gt;</value>
+  </data>
   <data name="ForDevelopers" xml:space="preserve">
     <value>For developers</value>
+  </data>
+  <data name="Home" xml:space="preserve">
+    <value>Home</value>
+  </data>
+  <data name="NotFoundText" xml:space="preserve">
+    <value>We can not find the page you are looking for, but Geonorge will help you further.</value>
+  </data>
+  <data name="SearchFor" xml:space="preserve">
+    <value>Search for</value>
   </data>
 </root>
