--- a/Kartverket.Geonorge.Download/Resources/UI.resx
+++ b/Kartverket.Geonorge.Download/Resources/UI.resx
@@ -117,16 +117,41 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ApiDocumentation" xml:space="preserve">
+    <value>API dokumentasjon</value>
+  </data>
   <data name="ApiHelp" xml:space="preserve">
     <value>API hjelp</value>
   </data>
   <data name="APIsAndInterfaces" xml:space="preserve">
     <value>API-er og grensesnitt</value>
   </data>
+  <data name="ContactUs" xml:space="preserve">
+    <value>Kontakt oss</value>
+  </data>
   <data name="DownloadAPI" xml:space="preserve">
     <value>Nedlasting API</value>
   </data>
+  <data name="Error" xml:space="preserve">
+    <value>Feil</value>
+  </data>
+  <data name="ErrorInfo" xml:space="preserve">
+    <value>Det har desverre skjedd en feil med din forespørsel. Prøv igjen om litt.</value>
+  </data>
+  <data name="ErrorReport" xml:space="preserve">
+    <value>&lt;p&gt;Feilen er logget og vil sjekkes av systemansvarlig.&lt;/p&gt;
+&lt;p&gt;Du kan også rapportere feilen til &lt;a mailto:"post@norgedigitalt.no"&gt;post@norgedigitalt.no&lt;/a&gt;.&lt;/p&gt;</value>
+  </data>
   <data name="ForDevelopers" xml:space="preserve">
     <value>For utviklere</value>
+  </data>
+  <data name="Home" xml:space="preserve">
+    <value>Forside</value>
+  </data>
+  <data name="NotFoundText" xml:space="preserve">
+    <value>Vi finner ikke siden du leter etter, men Geonorge skal hjelpe deg videre.</value>
+  </data>
+  <data name="SearchFor" xml:space="preserve">
+    <value>Søk etter</value>
   </data>
 </root>
